# climate_monitor

./: .gitignore  README.md  code.py
.devcontainer/: devcontainer.json
analysis/: eda.ipynb  pyproject.toml
databricks_dbt/: databricks_dbt_setup.sh  main.py  pyproject.toml
dbt/: dbt_setup.sh  pyproject.toml
dbt/databricks/: dbt_project.yml
pico/: README.md  code.py  deploy_code.sh  logger.py  mqtt_manager.py  networking.py  requirements-circuitpython.txt  sensors.py  set_up_new_pico.sh
pico/common/: mqtt_manager.py  settings.toml
pico/variant_a/: README.md  code.py  sensors.py
pico/variant_b/: README.md  code.py  sensors.py
pico/variant_c/: README.md  code.py  requirements-circuitpython.txt  sensors.py
pico/variant_d/: README.md  requirements-circuitpython.txt  sensors.py
pico/variant_e/: README.md  code.py  sensors.py
server/: bulk_data_provider.py  data_provider.py  db_setup.sql  db_tests.ipynb  initial_data_provider.py  mqtt_postgres_bridge.py  postgres_auth.py  pyproject.toml  run_mqtt_broker.sh  server_setup.sh  summarizer.py  system_setup.sh  websocket_server.py  ws_data_provider.py
server/service_files/: bulk_data_provider.service  initial_data_provider.service  mqtt_postgres_bridge.service  summarizer.service  summarizer.timer  websocket_server.service
streamlit_page/: pyproject.toml  streamlit_app.py
viewer/: old_app.py  plot_temp_data.py  pyproject.toml  requirements.txt  streamlit_app.py
website/: dashboard.css  dashboard.js  index.html  test.html  test2.html
website/js/: main.js
website/root/: index.html
